tests/ui/parser/issues/issue-5544-b.stderr
error: integer literal is too large
  --> $DIR/issue-5544-b.rs:2:19
   |
LL |     let __isize = 0xffff_ffff_ffff_ffff_ffff_ffff_ffff_ffff_ff;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: value exceeds limit of `0xffffffffffffffffffffffffffffffff`

error: aborting due to 1 previous error

