tests/ui/parser/issues/issue-5544-b.rs
fn main() {
    let __isize = 0xffff_ffff_ffff_ffff_ffff_ffff_ffff_ffff_ff;
    //~^ ERROR integer literal is too large
}
